@@ -98,7 +98,6 @@
 					<!-- Show 100% of the lines from the stack trace (doesn't work) -->
 					<trimStackTrace>false</trimStackTrace>
 
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 				</configuration>
 				<executions>
 					<execution>
